--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGODB_URL='mongodb://localhost/supreme'
+MONGODB_URL='mongodb://localhost/movieBookingPlatform'
 MONGO_USER=
 MONGO_PASS=
 PORT=12345
 SESSION_SECRET='Test'
-SESSION_MONGODB_URL='mongodb://localhost/supreme'
+SESSION_MONGODB_URL='mongodb://localhost/movieBookingPlatformSession'
